--- a/config/exemple.config.json
+++ b/config/exemple.config.json
@@ -9,5 +9,13 @@
     "css": "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css",
     "js": "https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
   },
-  "socketio": "https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.min.js"
+  "io": {
+    "js": "https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.min.js",
+    "address": "localhost",
+    "port": "3000"
+  },
+  "server": {
+    "address": "localhost",
+    "port": "8000"
+  }
 }
